--- a/resume.tex
+++ b/resume.tex
@@ -64,7 +64,7 @@
 
 
 \namesection{Young}{Guo}{\urlstyle{same}\url{https://oldguo.github.io} \\
-\href{mailto:young.guo@berkeley.edu}{young.guo@berkeley.edu} | 408-693-7904 \\ 2035 Channing Way 103 | Berkeley, California 94720 – 2274
+\href{mailto:young.guo@berkeley.edu}{young.guo@berkeley.edu} | 408-693-7904 \\ 2332 Channing Way \#3 | Berkeley, California 94720 – 2274
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -82,14 +82,8 @@
 \section{Education}
 
 \subsection{UC Berkeley}
-\descript{B.A. Computer Science}
-\location{Expected May 2019 | Berkeley, CA \\ GPA\@: 3.73 / 4.0}
-\sectionsep{}
-
-
-\subsection{Monta Vista High School}
-\location{Grad. June 2015 |  Cupertino, CA \\ Cum. GPA\@: 3.96 / 4.0\\SAT\@: 2390}
-
+\descript{B.A. Computer Science \\ Regents and Chancellors Scholar}
+\location{Expected May 2019 | Berkeley, CA \\ GPA\@: 3.74 / 4.0}
 \sectionsep{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -98,19 +92,20 @@
 
 \section{Coursework}
 \subsection{Undergraduate}
-\textbf{CS61A}: Structure and Interpretation of Computer Programming\\
 \textbf{MATH54}: Linear Algebra and Differential Equations\\
+\textbf{EE16A}: Designing Information Devices and Systems I\\
+\textbf{CS61A}: Structure and Interpretation of Computer Programming\\
 \textbf{CS61B}: Data Structures\\
-\textbf{CS70}: Discrete Mathematics and Probability Theory\\
 \textbf{CS61C}: Machine Structures\\
+\textbf{CS70}: Discrete Mathematics and Probability Theory\\
 \textbf{CS188}: Artificial Intelligence\\
 \textbf{CS186}: Database Systems\\
 \textbf{CS195}: Social Implications of Computing\\
 \textbf{CS162}: Operating Systems and Systems Programming\\
 \textbf{CS170}: Efficient Algorithms and Intractable Problems\\
 \textbf{CS168}: Introduction to the Internet: Architecture and Protocols\\
-\textbf{CS161}*: Computer Security\\
-\textbf{CS164}*: Programming Languages and Compilers
+\textbf{CS161}: Computer Security\\
+\textbf{CS164}: Programming Languages and Compilers
 
 \sectionsep{}
 
@@ -121,8 +116,9 @@
 \section{Skills}
 \subsection{Programming}
 Java \textbullet{} C \textbullet{} Python \textbullet{} Swift \textbullet{} SQL\\
-HTML/CSS/JavaScript \textbullet{} Rails \textbullet{} Django\\
-Docker \textbullet{} Kubernetes \textbullet{} Helm \textbullet{} Jenkins\\
+HTML \textbullet{} CSS \textbullet{} JavaScript \textbullet{} TypeScript \\
+React.js \textbullet{} GraphQL \textbullet{} Rails \textbullet{} Django \\
+Kubernetes \textbullet{} Docker \textbullet{} Helm \textbullet{} Jenkins\\
 Git \textbullet{} Vim
 \sectionsep{}
 
@@ -152,13 +148,23 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
+\runsubsection{CodeBase}
+\descript{| President }
+\location{February 2017 – Present | Berkeley, CA}
+\sectionsep{}
+\begin{tightemize}
+  \item Fall 2018 (President)
+  \item Spring 2018 (PM): Full-stack admin dashboard for fin-tech startup, Beam
+  \item Fall 2017 (Dev): AWS infrastructure for AI-driven healthcare startup, YiTuuX
+  \item Spring 2017 (Dev): NLP chatbot for dev-sourcing startup, Crowdbotics
+\end{tightemize}
+\sectionsep{}
 
 \runsubsection{Stripe}
 \descript{| Software Engineer Intern}
 \location{May 2018 – August 2018 | San Francisco, CA}
-\vspace{\topsep}
 \begin{tightemize}
-  \item Incoming Summer 2018
+  \item Product Dashboard 
 \end{tightemize}
 
 \sectionsep{}
@@ -169,16 +175,6 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
   \item Implement fully customized Jenkins Helm Chart on Kubernetes clusters
   \item Leverage Arquillian Cube for integration tests in Kubernetes environments
   \item Integrate Kubernetes/Docker pipelines into current bare metal based CI
-\end{tightemize}
-\sectionsep{}
-
-\runsubsection{CodeBase}
-\descript{| Project Manager }
-\location{February 2017 – Present | Berkeley, CA}
-\begin{tightemize}
-    \item Student organization that provides software solutions for startups
-    \item Develop NLP slackbot for developer sourcing startup, Crowdbotics
-    \item Build out AWS infrastructure for AI-driven healthcare startup, YiTuuX
 \end{tightemize}
 \sectionsep{}
 
@@ -226,19 +222,6 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
   \item Implement user account, item listing, and shopping cart functionality
   \item Develop search/filtering algorithms, user follower system, and ratings/reviews integration
 \end{tightemize}
-\sectionsep{}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     AWARDS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Awards}
-\begin{tabular}{rll}
-2018 & National & UC Berkeley Regents' and Chancellors Scholarship\\
-2015 & 4\textsuperscript{th} – State & FBLA E-Business Programming\\
-2014 & 1\textsuperscript{st} – State & FBLA Desktop Application Programming\\
-2013 & 1\textsuperscript{st} – State & FBLA Computer Game and Simulation Programming
-\end{tabular}
 \sectionsep{}
 
 \end{minipage}
