--- a/resume.tex
+++ b/resume.tex
@@ -115,7 +115,7 @@
 
 \section{Skills}
 \subsection{Programming}
-Java \textbullet{} C \textbullet{} Python \textbullet{} Swift \textbullet{} SQL\\
+Java \textbullet{} C \textbullet{} Python \textbullet{} Ruby \textbullet{}Swift \textbullet{} SQL\\
 HTML \textbullet{} CSS \textbullet{} JavaScript \textbullet{} TypeScript \\
 React.js \textbullet{} GraphQL \textbullet{} Rails \textbullet{} Django \\
 Kubernetes \textbullet{} Docker \textbullet{} Helm \textbullet{} Jenkins\\
@@ -148,10 +148,18 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
+\runsubsection{Stripe}
+\descript{| Software Engineer Intern}
+\location{May 2018 – August 2018 | San Francisco, CA}
+\sectionsep{}
+\begin{tightemize}
+  \item Product Dashboard
+\end{tightemize}
+\sectionsep{}
+
 \runsubsection{CodeBase}
 \descript{| President }
 \location{February 2017 – Present | Berkeley, CA}
-\sectionsep{}
 \begin{tightemize}
   \item Fall 2018 (President)
   \item Spring 2018 (PM): Full-stack admin dashboard for fin-tech startup, Beam
@@ -159,13 +167,6 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
   \item Spring 2017 (Dev): NLP chatbot for dev-sourcing startup, Crowdbotics
 \end{tightemize}
 \sectionsep{}
-
-\runsubsection{Stripe}
-\descript{| Software Engineer Intern}
-\location{May 2018 – August 2018 | San Francisco, CA}
-\begin{tightemize}
-  \item Product Dashboard 
-\end{tightemize}
 
 \sectionsep{}
 \runsubsection{Workday}
@@ -205,7 +206,7 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 \sectionsep{}
 
 \runsubsection{Ship}
-\descript{| An online matchmaking-driven dating application}
+\descript{| An Online Matchmaking-Driven Dating Application}
 \location{CalHacks 3.0 – November 2016}
 \begin{tightemize}
   \item HTML/CSS/React.js/Node.js/Rails
@@ -215,7 +216,7 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 \sectionsep{}
 
 \runsubsection{Craftnet}
-\descript{| A social marketplace for artistic entrepreneurs}
+\descript{| A Social Marketplace for Artistic Entrepreneurs}
 \location{October 2014 – February 2015}
 \begin{tightemize}
   \item HTML/CSS/JavaScript/Django
