Update Stripe info

--- a/resume.tex
+++ b/resume.tex
@@ -153,7 +153,7 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 \location{May 2018 – August 2018 | San Francisco, CA}
 \sectionsep{}
 \begin{tightemize}
-  \item Product Dashboard
+  \item Dashboard Product Team
 \end{tightemize}
 \sectionsep{}
 
