--- a/resume.tex
+++ b/resume.tex
@@ -153,7 +153,9 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 \location{May 2018 – August 2018 | San Francisco, CA}
 \sectionsep{}
 \begin{tightemize}
-  \item Dashboard Product Team
+\item Implement end-to-end dashboard data export customization pipeline
+\item Re-architect service powering all 10,000+ of Stripe's daily data exports
+\item Design, test, and integrate modular data-formatting layer responsible for processing 1 million+ object formatting requests daily
 \end{tightemize}
 \sectionsep{}
 
