--- a/resume.tex
+++ b/resume.tex
@@ -149,7 +149,7 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 
 \section{Experience}
 \runsubsection{Stripe}
-\descript{| Software Engineer Intern}
+\descript{| Software Engineering Intern}
 \location{May 2018 – August 2018 | San Francisco, CA}
 \sectionsep{}
 \begin{tightemize}
