--- a/resume.tex
+++ b/resume.tex
@@ -197,9 +197,19 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 
 \section{Projects}
 
+\runsubsection{Beam Financial}
+\descript{| Financial Analytics Web Dashboard}
+\location{Jan 2018 – Aug 2018}
+\begin{tightemize}
+    \item React/TypeScript/GraphQL/Apollo/Postgres/AWS
+    \item Lead frontend and backend team development across 8 developers
+    \item Integrate AWS Cognito/Google OAuth authentication flow
+\end{tightemize}
+\sectionsep{}
+
 \runsubsection{Haven}
-\descript{| An Anonymous Social Network for iOS}
-\location{June 2017 – Present}
+\descript{| Anonymous Social Network for iOS}
+\location{June 2017 – Jan 2018}
 \begin{tightemize}
     \item Swift/Firebase
     \item Lead backend team development using Firebase NoSQL database
@@ -208,22 +218,12 @@ Portfolio: \href{https://oldguo.github.io/}{\textbf{oldguo.github.io}}
 \sectionsep{}
 
 \runsubsection{Ship}
-\descript{| An Online Matchmaking-Driven Dating Application}
-\location{CalHacks 3.0 – November 2016}
+\descript{| Online Matchmaking-Driven Dating Application}
+\location{CalHacks 3.0 – Nov 2016}
 \begin{tightemize}
-  \item HTML/CSS/React.js/Node.js/Rails
+  \item HTML/CSS/React/Node/Rails
   \item Implement unique matchmaking system and ship algorithms
   \item Integrate Facebook Graph API for account management
-\end{tightemize}
-\sectionsep{}
-
-\runsubsection{Craftnet}
-\descript{| A Social Marketplace for Artistic Entrepreneurs}
-\location{October 2014 – February 2015}
-\begin{tightemize}
-  \item HTML/CSS/JavaScript/Django
-  \item Implement user account, item listing, and shopping cart functionality
-  \item Develop search/filtering algorithms, user follower system, and ratings/reviews integration
 \end{tightemize}
 \sectionsep{}
 
